[workspace]
members = ["casper-server"]

[profile.release]
opt-level = 3
debug = false # Do not include debug symbols in the executable.

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"

[profile.bench]
debug = true
