[package]
edition = "2021"
name = "casper-server"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.77"
base64 = "0.22"
bitflags = "2.0"
bitflags-serde-legacy = "0.1"
blake3 = "1.0"
bytes = { version = "1", features = ["serde"] }
bstr = "1.9"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.0"
dyn-clone = "1"
flexbuffers = "25"
form_urlencoded = "1"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "1.1"
itertools = "0.14"
linked-hash-map = "0.5.4"
log = "0.4"
mime = "0.3.17"
mini-moka = "0.10"
moka = { version = "0.12", features = ["future"] }
ntex = { version = "2.0", features = ["tokio", "openssl"] }
num_cpus = "1.13"
num_threads = "0.1"
once_cell = "1"
openssl = "0.10"
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-http = "0.29.0"
opentelemetry-prometheus = "0.29.1"
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-zipkin = { version = "0.29.0", default-features = false }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio-current-thread", "experimental_async_runtime", "experimental_trace_batch_span_processor_with_async_runtime"] }
ouroboros = "0.18"
parking_lot = "0.12"
percent-encoding = "2.2"
pin-project-lite = "0.2.8"
prometheus = "0.14"
rand = "0.9"
regex = "1.9"
scopeguard = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.15"
serde_yaml = "0.9"
sys-info = "0.9"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zstd = "0.13"

[dev-dependencies]
serial_test = "3.0"
tokio-stream = { version = "0.1", features = ["time"] }

[dependencies.mlua]
features = ["luau-jit", "async", "serialize", "macros", "anyhow"]
version = "0.10.3"

[dependencies.fred]
features = ["enable-native-tls"]
version = "10"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"
