[package]
name = "casper-plugin"
version = "0.1.0"
edition = "2018"

[lib]
name = "dynamodb"
crate-type = ["cdylib"]

[dependencies]
casper-runtime = { path = "../runtime" }

once_cell = "1"
mlua = { version = "0.7", features = ["luajit52", "async", "send", "vendored", "serialize", "module"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
serde = "1"
serde_json = "1"
anyhow = "*"
ripemd160 = "0.9"
