[package]
name = "casper-runtime"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "plugin"

[dependencies]
mlua = { version = "0.7", features = ["luajit52", "async", "send", "vendored", "serialize"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# url = "2.0"
http = "0.2"
form_urlencoded = "1"
serde_json = "1"
serde_yaml = "0.8"
bytes = { version = "1", features = ["serde"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
http-serde = "1"
flexbuffers = "2"
bstr = { version = "0.2.17", features = ["serde1"] }
base64 = "0.13"

once_cell = "1"
pretty_env_logger = "0.4"
anyhow = "1"
num_cpus = "1.13"
regex = "1.5"
linked-hash-map = "0.5.4"
hex = "0.4.3"

# Redis
fred = { version = "4.3", default-features = false, features = ["metrics", "pool-prefer-active", "enable-tls"] }

# plugin binary
tower = { version = "0.4", features = ["make"] }
ripemd = "0.1"
