[package]
edition = "2021"
name = "casper-runtime"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bitflags = "1.3.2"
bstr = { version = "0.2.17", features = ["serde1"] }
bytes = { version = "1", features = ["serde"] }
clap = { version = "3", features = ["derive", "env"] }
flexbuffers = "2"
form_urlencoded = "1"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "0.2"
http-serde = "1"
hyper = { version = "0.14", features = ["full"] }
linked-hash-map = "0.5.4"
num_cpus = "1.13"
once_cell = "1"
pin-project-lite = "0.2.8"
rayon = "1.5.1"
regex = "1.5"
ripemd = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.9.2"

[dependencies.mlua]
features = ["luajit52", "async", "send", "vendored", "serialize"]
version = "0.7.2"

[dependencies.fred]
default-features = false
features = ["metrics", "pool-prefer-active", "enable-tls"]
version = "4.3.2"
