[package]
edition = "2021"
name = "casper-runtime"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bitflags = "1.3.2"
bstr = { version = "0.2.17", features = ["serde1"] }
bytes = { version = "1", features = ["serde"] }
clap = { version = "3", features = ["derive", "env"] }
flexbuffers = "2"
form_urlencoded = "1"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "0.2"
http-serde = "1"
hyper = { version = "0.14", features = ["full"] }
linked-hash-map = "0.5.4"
moka = { version = "0.7", features = ["future"] }
num_cpus = "1.13"
once_cell = "1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.10.0"
ouroboros = "0.14"
pin-project-lite = "0.2.8"
prometheus = "0.13"
rayon = "1.5.1"
regex = "1.5"
ripemd = "0.1"
scopeguard = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
zstd = "0.10"

[dependencies.mlua]
features = ["luajit52", "async", "send", "vendored", "serialize"]
git = "https://github.com/khvzak/mlua"

[dependencies.fred]
default-features = false
features = ["metrics", "pool-prefer-active", "enable-tls"]
version = "4.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
affinity = "0.1.2"
